<resources>
    <string name="app_name">Recipes</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name of recipe</string>
    <string name="serves">Serves how many people</string>
    <string name="ingredients">Ingredients</string>
    <string name="method">Method</string>
    <string name="profile">PROFILE</string>
    <string name="feed">FEED</string>
    <string name="activity">ACTIVITY</string>
    <string name="settings">SETTINGS</string>
    <string name="vegeterian">Vegetarian</string>
    <string name="nonvegetarian">Non Vegetarian</string>
    <string name="featured">Featured</string>
    <string name="salads">Salads</string>
    <string name="regions">Regions</string>
</resources>
