<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#c0b4b4">
    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/menu" />

        <com.example.lucie.recipes.widget.CanaroTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/featured"
            android:textSize="@dimen/guillotine_item_text_size" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/vegetarian"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin"
        android:onClick="vegetarianClick">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/menu"
            android:layout_marginLeft="5dp"/>

        <com.example.lucie.recipes.widget.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/vegeterian" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nonvegan"
        style="@style/LinearLayout.GuillotineItem"
        android:onClick="nonveganClick">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/menu" />

        <com.example.lucie.recipes.widget.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/nonvegetarian" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/featured"
        style="@style/LinearLayout.GuillotineItem"
        android:onClick="featuredClick">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/menu" />

        <com.example.lucie.recipes.widget.CanaroTextView
            style="@style/TextView.GuillotineItem.Selected"
            android:text="@string/featured" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/salads"
        style="@style/LinearLayout.GuillotineItem"
        android:nestedScrollingEnabled="false"
        android:onClick="saladsClick">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/menu" />

        <com.example.lucie.recipes.widget.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/salads" />
    </LinearLayout>
</LinearLayout>